--- a/src/ContosoSuitesDashboard/requirements.txt
+++ b/src/ContosoSuitesDashboard/requirements.txt
@@ -1,9 +1,9 @@
-pandas
-numpy
-scikit-learn
-streamlit==1.29.0
-streamlit-extras==0.3.6
-streamlit_js_eval==0.1.5
-openai==1.12.0
-azure-cognitiveservices-speech>=1.33.0
-azure-ai-textanalytics>=5.3.0
+pandas==2.2.2
+numpy==2.1.0
+scikit-learn==1.5.1
+streamlit==1.37.1
+streamlit-extras==0.4.7
+streamlit_js_eval==0.1.7
+openai==1.42.0
+azure-cognitiveservices-speech==1.40.0
+azure-ai-textanalytics==5.3.0
