--- a/src/.github/workflows/api.yml
+++ b/src/.github/workflows/api.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Docker Login
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
-      uses: docker/login-action@v1.9.0
+      uses: docker/login-action@v3
       with:
         # Server address of Docker registry. If not set then will default to Docker Hub
         registry: ${{ secrets.ACR_LOGIN_SERVER }}
@@ -62,6 +62,7 @@ jobs:
   deploy-to-prod:
   
     runs-on: ubuntu-latest
+    needs: dockerBuildPush
     environment:
       name: prod
       url: https://{your_prefix}-api.azurewebsites.net/
@@ -70,7 +71,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: 'Login via Azure CLI'
-      uses: azure/login@v1
+      uses: azure/login@v2.1.1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
