--- a/src/.github/workflows/dashboard.yml
+++ b/src/.github/workflows/dashboard.yml
@@ -16,22 +16,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 jobs:
-  buildSecretsFile:
-
-    runs-on: ubuntu-latest
-
-    steps:
-    
-    # TODO: Add steps here to create the secrets file from Github Secrets
-    - name: Create Secrets File
-      run: echo "$STREAMLIT_SECRETS >> .streamlit/secrets.toml"
-      shell: bash
-      env:
-        STREAMLIT_SECRETS: ${{ secrets.STREAMLIT_SECRETS }}
-
   dockerBuildPush:
     runs-on: ubuntu-latest
-    needs: buildSecretsFile
 
     steps:
     - uses: actions/checkout@v3
@@ -39,7 +25,7 @@ jobs:
     - name: Docker Login
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
-      uses: docker/login-action@v1.9.0
+      uses: docker/login-action@v3
       with:
         # Server address of Docker registry. If not set then will default to Docker Hub
         registry: ${{ secrets.ACR_LOGIN_SERVER }}
@@ -49,7 +35,13 @@ jobs:
         password: ${{ secrets.ACR_PASSWORD }}
         # Log out from the Docker registry at the end of a job
         logout: true
-        
+    
+    - name: Create Secrets File
+      run: echo "$STREAMLIT_SECRETS" > ./src/ContosoSuitesDashboard/.streamlit/secrets.toml
+      shell: bash
+      env:
+          STREAMLIT_SECRETS: ${{ secrets.STREAMLIT_SECRETS }}
+
     - name: Docker Build
       run: docker build -t $registryName/$repositoryName:$tag --build-arg build_version=$tag $dockerFolderPath
       
@@ -59,6 +51,7 @@ jobs:
   deploy-to-prod:
   
     runs-on: ubuntu-latest
+    needs: dockerBuildPush
     environment:
       name: prod
       url: https://{your_prefix}-dash.azurewebsites.net/
@@ -67,7 +60,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: 'Login via Azure CLI'
-      uses: azure/login@v1
+      uses: azure/login@v2.1.1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
