--- a/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
@@ -2,6 +2,7 @@
 endpoint = "YOUR AZURE OPENAI ENDPOINT"
 key = "YOUR AZURE OPENAI KEY"
 deployment_name = "gpt-4"
+embedding_deployment_name = "text-embedding-ada-002"
 
 [search]
 endpoint = "YOUR AZURE AI SEARCH ENDPOINT"
@@ -11,3 +12,7 @@ index_name = "contoso-suites-faq"
 [speech]
 key = "YOUR AZURE AI SPEECH KEY"
 region = "YOUR AZURE AI SPEECH REGION"
+
+[language]
+endpoint = "YOUR AZURE AI LANGUAGE ENDPOINT"
+key = "YOUR AZURE AI LANGUAGE KEY"
