Update exercise 4 task 1

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ openai/
 secrets.toml
 1_Chat_with_Data_solution.py
 4_Call_Center_solution.py
+5_Call_Center_Search_solution.py
 
 # User-specific files
 *.rsuser
