Add resources for exercise 3

--- a/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
@@ -16,3 +16,6 @@ region = "YOUR AZURE AI SPEECH REGION"
 [language]
 endpoint = "YOUR AZURE AI LANGUAGE ENDPOINT"
 key = "YOUR AZURE AI LANGUAGE KEY"
+
+[api]
+endpoint = "YOUR WEB API ENDPOINT"
