Add Cosmos DB secrets to template

--- a/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
@@ -19,3 +19,8 @@ key = "YOUR AZURE AI LANGUAGE KEY"
 
 [api]
 endpoint = "YOUR WEB API ENDPOINT"
+
+[cosmos]
+endpoint = "YOUR COSMOS DB ENDPOINT"
+key = "YOUR COSMOS DB PRIMARY KEY"
+database_name = "ContosoSuites"
