Adding appsettings file for web api

--- a/src/ContosoSuitesWebAPI/appsettings.Development.json
+++ b/src/ContosoSuitesWebAPI/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AZURE_OPENAI_ENDPOINT": "<YOUR_AZURE_OPENAI_ENDPOINT>",
+  "AZURE_OPENAI_API_KEY": "<YOUR_AZURE_OPENAI_API_KEY>",
+  "AZURE_COSMOS_DB_CONNECTION_STRING": "<YOUR_COSMOS_DB_CONNECTION_STRING>",
+  "DEPLOYMENT_NAME": "text-embedding-ada-002"
 }
