--- a/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
@@ -1,7 +1,7 @@
 [aoai]
 endpoint = "YOUR AZURE OPENAI ENDPOINT"
 key = "YOUR AZURE OPENAI KEY"
-deployment_name = "gpt-4"
+deployment_name = "gpt-4o"
 embedding_deployment_name = "text-embedding-ada-002"
 
 [search]
