--- a/src/ContosoSuitesWebAPI/appsettings.Development.json
+++ b/src/ContosoSuitesWebAPI/appsettings.Development.json
@@ -8,5 +8,7 @@
   "AZURE_OPENAI_ENDPOINT": "<YOUR_AZURE_OPENAI_ENDPOINT>",
   "AZURE_OPENAI_API_KEY": "<YOUR_AZURE_OPENAI_API_KEY>",
   "AZURE_COSMOS_DB_CONNECTION_STRING": "<YOUR_COSMOS_DB_CONNECTION_STRING>",
-  "DEPLOYMENT_NAME": "text-embedding-ada-002"
+  "DEPLOYMENT_NAME": "text-embedding-ada-002",
+  "COSMOS_DATABASE_NAME": "ContosoSuites",
+  "MAINTENANCE_REQUESTS_CONTAINER_NAME": "MaintenanceRequests"
 }
