Updates to E1T2 for Codespaces

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 				"ms-azuretools.vscode-bicep",
 				"ms-dotnettools.csharp",
 				"ms-azuretools.vscode-azureresourcegroups",
-				"ms-dotnettools.csdevkit"
+				"ms-dotnettools.csdevkit",
+				"ms-python.python"
 			]
 		}
 	}
