--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -77,5 +77,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: '{your_prefix}-api'
-        images: {your_registry_name}.azurecr.io/techexcel/csapi:${{github.run_number}}
+        app-name: 'op3eqv3gu7pve-api'
+        images: op3eqv3gu7pvecosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
