--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -66,5 +66,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: '{your_prefix}-dash'
-        images: {your_registry_name}.azurecr.io/techexcel/csdash:${{github.run_number}}
+        app-name: 'op3eqv3gu7pve-dash'
+        images: op3eqv3gu7pvecosureg.azurecr.io/techexcel/csdash:${{github.run_number}}
