--- a/src/.github/workflows/api.yml
+++ b/src/.github/workflows/api.yml
@@ -1,7 +1,7 @@
 name: API Deployment
 
 env:
-  registryName: {your_registry_name}.azurecr.io
+  registryName: psjdffwb4bkawcosureg.azurecr.io
   repositoryName: techexcel/csapi
   dockerFolderPath: ./src/ContosoSuitesWebAPI
   tag: ${{github.run_number}}
@@ -65,7 +65,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://{your_prefix}-api.azurewebsites.net/
+      url: https://psjdffwb4bkaw-api.azurewebsites.net/
     
     steps:
     - uses: actions/checkout@v4
@@ -77,5 +77,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: '{your_prefix}-api'
-        images: {your_registry_name}.azurecr.io/techexcel/csapi:${{github.run_number}}
+        app-name: 'psjdffwb4bkaw-api'
+        images: psjdffwb4bkawcosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
