--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -1,7 +1,7 @@
 name: API Deployment
 
 env:
-  registryName: puf6zlc2h7et4cosureg.azurecr.io
+  registryName: wprrh2ogqrlcecosureg.azurecr.io
   repositoryName: techexcel/csapi
   dockerFolderPath: ./src/ContosoSuitesWebAPI
   tag: ${{github.run_number}}
@@ -65,7 +65,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://puf6zlc2h7et4-api.azurewebsites.net/
+      url: https://wprrh2ogqrlce-api.azurewebsites.net/
     
     steps:
     - uses: actions/checkout@v4
@@ -77,5 +77,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: 'puf6zlc2h7et4-api'
-        images: puf6zlc2h7et4cosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
+        app-name: 'wprrh2ogqrlce-api'
+        images: wprrh2ogqrlcecosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
