--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -54,7 +54,7 @@ jobs:
     needs: dockerBuildPush
     environment:
       name: prod
-      url: https://{your_prefix}-dash.azurewebsites.net/
+      url: https://v4amxhg5z5sam-dash.azurewebsites.net/
     
     steps:
     - uses: actions/checkout@v4
@@ -66,5 +66,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: '{your_prefix}-dash'
-        images: {your_registry_name}.azurecr.io/techexcel/csdash:${{github.run_number}}
+        app-name: 'v4amxhg5z5sam-dash'
+        images: v4amxhg5z5samcosureg.azurecr.io/techexcel/csdash:${{github.run_number}}
