--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -77,5 +77,5 @@ jobs:
 
     - uses: azure/webapps-deploy@v2
       with:
-        app-name: '{your_prefix}-api'
+        app-name: 'v4amxhg5z5sam-api'
         images: v4amxhg5z5samcosureg.azurecr.io/techexcel/csapi:${{github.run_number}}
