--- a/src/ContosoSuitesVectorizationFunction/ContosoSuitesVectorizationFunction.csproj
+++ b/src/ContosoSuitesVectorizationFunction/ContosoSuitesVectorizationFunction.csproj
@@ -5,6 +5,7 @@
     <OutputType>Exe</OutputType>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>e69c23ea-466f-4e1d-864e-23f5ae866e1c</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
