--- a/src/ContosoSuitesDashboard/.streamlit/secrets.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.toml
@@ -1,1 +1,26 @@
+[aoai]
+endpoint = "https://hfajvpcg2zlmy-openai.openai.azure.com/"
+key = "69d6f837a4284e198f42493d89b1ac2d"
+deployment_name = "gpt-4o"
+embedding_deployment_name = "text-embedding-ada-002"
 
+[search]
+endpoint = "https://hfajvpcg2zlmy-search.search.windows.net"
+key = "f5P5PsEKfZMsc4AbN0gxGDqMjkfgn7juq2ybRq9mLNAzSeDEwd01"
+index_name = "contoso-suites-faq"
+
+[speech]
+key = "c523f1f71e8e463fb0678d85d06a42e8"
+region = "eastus2"
+
+[language]
+endpoint = "https://hfajvpcg2zlmy-lang.cognitiveservices.azure.com/"
+key = "869b6a1304a341b3ac426ca50d571e18"
+
+[api]
+endpoint = "http://localhost:5292"
+
+[cosmos]
+endpoint = "YOUR COSMOS DB ENDPOINT"
+key = "YOUR COSMOS DB PRIMARY KEY"
+database_name = "ContosoSuites"
