Implement hotel and booking retrieval endpoints and configure database connection

--- a/src/ContosoSuitesWebAPI/appsettings.json
+++ b/src/ContosoSuitesWebAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "ConnectionString": "Server=tcp:yuvtlruvksqlc-sqlserver.database.windows.net,1433;Initial Catalog=ContosoSuitesBookings;Persist Security Info=False;User ID=contosoadmin;Password=g@G9@2nD7C1BP%uh;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30"
+}
 }
