--- a/src/ContosoSuitesWebAPI/ContosoSuitesWebAPI.csproj
+++ b/src/ContosoSuitesWebAPI/ContosoSuitesWebAPI.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>b793b4c4-7943-4d58-aae8-8e8871404512</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
