--- a/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
@@ -1,5 +1,6 @@
 [aoai]
 endpoint = "YOUR AZURE OPENAI ENDPOINT"
+key = "YOUR AZURE OPENAI KEY"
 deployment_name = "gpt-4o"
 embedding_deployment_name = "text-embedding-ada-002"
 
