Lab 4 corrections and a few typo repairs

--- a/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
+++ b/src/ContosoSuitesDashboard/.streamlit/secrets.template.toml
@@ -23,3 +23,4 @@ endpoint = "YOUR WEB API ENDPOINT"
 [cosmos]
 endpoint = "YOUR COSMOS DB ENDPOINT"
 database_name = "ContosoSuites"
+client_id = "YOUR MANAGED IDENTITY CLIENT ID"
